--- a/public/editor/index.html
+++ b/public/editor/index.html
@@ -113,58 +113,59 @@
 			<div class="modal-content">
 				<div class="modal-header">
 		          <button type="button" class="close" data-dismiss="modal">&times;</button>
-		          <h4 class="modal-title">Furniture Inventory</h4>
+		          <h4 class="modal-title">Lineas</h4>
 		        </div>
 		        <div class="modal-body">
 		          <div id="add-items" class="panel-group">
 					<div id="floor-items" class="panel panel-default">
-						<div id="floor-items-header" class="panel-heading"><h4 class="panel-title"><a data-toggle="collapse" data-parent="#add-items" href="#floor-items-body">Floor Items</a></h4></div>
+						<div id="floor-items-header" class="panel-heading"><h4 class="panel-title"><a data-toggle="collapse" data-parent="#add-items" href="#floor-items-body">Anza</a></h4></div>
 						<div id="floor-items-body" class="panel-collapse collapse in inventory-content">	
-							<div class="row panel-body" id="floor-items-wrapper">
+							<div class="row panel-body" id="anza">
 								<!-- Items added here by items.js -->
 							</div>
 						</div>
 					</div>
 					<div id="wall-items" class="panel panel-default">
-						<div id="wall-items-header" class="panel-heading"><h4 class="panel-title"><a data-toggle="collapse" data-parent="#add-items" href="#wall-items-body">Wall Items</a></h4></div>
+						<div id="wall-items-header" class="panel-heading"><h4 class="panel-title"><a data-toggle="collapse" data-parent="#add-items" href="#wall-items-body">Cerejeira brillo</a></h4></div>
 						<div id="wall-items-body" class="panel-collapse collapse inventory-content">	
-							<div class="row panel-body" id="wall-items-wrapper">
+							<div class="row panel-body" id="cerejeira-brillo">
 								<!-- Items added here by items.js -->
 							</div>
 						</div>
 					</div>
 					<div id="in-wall-items" class="panel panel-default">
-						<div id="in-wall-items-header" class="panel-heading"><h4 class="panel-title"><a data-toggle="collapse" data-parent="#add-items" href="#in-wall-items-body">In Wall Items</a></h4></div>
+						<div id="in-wall-items-header" class="panel-heading"><h4 class="panel-title"><a data-toggle="collapse" data-parent="#add-items" href="#in-wall-items-body">Cerejeira mate</a></h4></div>
 						<div id="in-wall-items-body" class="panel-collapse collapse inventory-content">	
-							<div class="row panel-body" id="in-wall-items-wrapper">
+							<div class="row panel-body" id="cerejeira-mate">
+								<!-- Items added here by items.js -->
+							</div>
+						</div>
+					</div>
+					<div id="in-wall-items" class="panel panel-default">
+						<div id="in-wall-items-header" class="panel-heading"><h4 class="panel-title"><a data-toggle="collapse" data-parent="#add-items" href="#in-wall-items-body">Imbuia</a></h4></div>
+						<div id="in-wall-items-body" class="panel-collapse collapse inventory-content">	
+							<div class="row panel-body" id="imbuia">
 								<!-- Items added here by items.js -->
 							</div>
 						</div>
 					</div>
 					<div id="in-wall-floor-items" class="panel panel-default">
-						<div id="in-wall-floor-items-header" class="panel-heading"><h4 class="panel-title"><a data-toggle="collapse" data-parent="#add-items" href="#in-wall-floor-items-body">In Wall Floor Items</a></h4></div>
+						<div id="in-wall-floor-items-header" class="panel-heading"><h4 class="panel-title"><a data-toggle="collapse" data-parent="#add-items" href="#in-wall-floor-items-body">StyloNobre -  clásica</a></h4></div>
 						<div id="in-wall-floor-items-body" class="panel-collapse collapse inventory-content">	
-							<div class="row panel-body" id="in-wall-floor-items-wrapper">
+							<div class="row panel-body" id="stylonoble-clasica">
 								<!-- Items added here by items.js -->
 							</div>
 						</div>
 					</div>
 					<div id="on-floor-items" class="panel panel-default">
-						<div id="on-floor-items-header" class="panel-heading"><h4 class="panel-title"><a data-toggle="collapse" data-parent="#add-items" href="#on-floor-items-body">On Floor Items</a></h4></div>
+						<div id="on-floor-items-header" class="panel-heading"><h4 class="panel-title"><a data-toggle="collapse" data-parent="#add-items" href="#on-floor-items-body">StyloNoble - noble</a></h4></div>
 						<div id="on-floor-items-body" class="panel-collapse collapse inventory-content">	
-							<div class="row panel-body" id="on-floor-items-wrapper">
+							<div class="row panel-body" id="stylonoble-noble">
 								<!-- Items added here by items.js -->
 							</div>
 						</div>
 					</div>
-					<div id="wall-floor-items" class="panel panel-default">
-						<div id="wall-floor-items-header" class="panel-heading"><h4 class="panel-title"><a data-toggle="collapse" data-parent="#add-items" href="#wall-floor-items-body">Wall-Floor Items</a></h4></div>
-						<div id="wall-floor-items-body" class="panel-collapse collapse inventory-content">	
-							<div class="row panel-body" id="wall-floor-items-wrapper">
-								<!-- Items added here by items.js -->
-							</div>
-						</div>
-					</div>
+				
 				</div>
 		        </div>
 		        <div class="modal-footer">
