Edicion de presupuesto, muestra los muebles, se pueden eliminar muebles desde el editor, esta el editor y el editor de diseño

--- a/public/editor/index.html
+++ b/public/editor/index.html
@@ -141,6 +141,50 @@
 			</div>
 		</div>
 	</div>
+
+	<!-- Presupuesto -->
+	<div class="modal fade" id="modalPresupuesto" tabindex="-1" role="dialog" aria-labelledby="modalPresupuestoLabel">
+		<div class="modal-dialog" role="document">
+			<div class="modal-content">
+				<div class="modal-header">
+					<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+					<h4 class="modal-title" id="modalPresupuestoLabel">Nuevo Presupuesto</h4>
+				</div>
+				<div class="modal-body">
+					<form id="form_presupuesto">
+						<div class="form-group">
+							<label for="recipient-name" class="control-label">Nombre Cliente:</label>
+							<input type="text" class="form-control" id="nombre_cliente" name="nombre_cliente">
+						</div>
+						<div class="form-group">
+							<label for="recipient-name" class="control-label">E-mail Cliente:</label>
+							<input type="text" class="form-control" id="email_cliente" name="email_cliente">
+						</div>
+						<div class="form-group">
+							<label for="recipient-name" class="control-label">Teléfono Cliente:</label>
+							<input type="text" class="form-control" id="telefono_cliente" name="telefono_cliente">
+						</div>
+						<div class="form-group">
+							<label for="recipient-name" class="control-label">Cedula Cliente:</label>
+							<input type="text" class="form-control" id="cedula_cliente" name="cedula_cliente">
+						</div>
+						<div class="form-group">
+							<label for="recipient-name" class="control-label">Fecha:</label>
+							<input type="text" class="form-control" id="fecha" name="fecha">
+						</div>
+						<div class="form-group">
+							<label for="recipient-name" class="control-label">Descuento:</label>
+							<input type="text" class="form-control" id="descuento" name="descuento">
+						</div>
+					</form>
+				</div>
+				<div class="modal-footer">
+					<button type="button" class="btn btn-default" data-dismiss="modal">Cerrar</button>
+					<button type="button" id="btn_cuardar_presupuesto" class="btn btn-primary">Guardar</button>
+				</div>
+			</div>
+		</div>
+	</div>
 </body>
 
 </html>
