Add. Editor de datos desde el editor, correcion de bugs

--- a/public/editor/index.html
+++ b/public/editor/index.html
@@ -43,6 +43,9 @@
 				<button id="capture_canvas_editor" class="btn btn-sm btn-default" title="Capturar Imagen">
 					<span class="glyphicon glyphicon-camera"></span>
 				</button>
+				<button id="editar_datos" class="btn btn-sm btn-default" title="Editar Datos" type="button">
+					<span class="glyphicon glyphicon-pencil"></span> Datos					
+				</button>
 			</div>
 			<div class="btn-hint ">Press the "Esc" key to stop drawing
 				walls</div>
