--- a/public/editor/index.html
+++ b/public/editor/index.html
@@ -63,7 +63,7 @@
 					title="Save Scene as a mesh"></a>
 				<a href="#" class="btn btn-default btn-sm glyphicon glyphicon-export" id="saveGLTF"
 					title="Save Scene as a GLTF"></a>
-				<!-- <a href="#" class="btn btn-default btn-sm glyphicon glyphicon-camera"	id="capture_canvas_editor_3d" title="Save Scene as a GLTF"></a> -->
+				<a href="#" class="btn btn-default btn-sm glyphicon glyphicon-camera"	id="capture_canvas_editor_3d" title="Save Scene as a GLTF"></a>
 			</div>
 		</div>
 	</div>
