boton de guardar config básica

--- a/public/editor/index.html
+++ b/public/editor/index.html
@@ -183,7 +183,7 @@
 				</div>
 				<div class="modal-footer">
 					<button type="button" class="btn btn-default" data-dismiss="modal">Cerrar</button>
-					<button type="button" id="btn_cuardar_presupuesto" class="btn btn-primary">Guardar</button>
+					<button type="button" id="btn_cuardar_presupuesto" class="btn btn-primary" data-dismiss="modal">Guardar</button>
 				</div>
 			</div>
 		</div>
