--- a/public/editor/index.html
+++ b/public/editor/index.html
@@ -21,152 +21,145 @@
 	<script src="js/app.js"></script>
 	<script src="js/capture-camara.js"></script>
 	<script src="js/presupuesto.js"></script>
+	<style>
+		m-0{
+			margin: 0px !important;
+		}
+	</style>
 </head>
 
 <body>
-	<div class="collapse" id="collapsePresupuesto" style="position: absolute; z-index: 2147483647;" >
-		<div class="well">
-			<button type="button" class="close close-collapse" data-dismiss="collapse" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-			<span style="visibility: hidden;">
-				Lorem ipsum dolor sit amet, consectetur adipisicing elit. Hic enim mollitia fuga reiciendis excepturi adipisci praesentium maxime dolorem facilis optio velit consequatur, consequuntur iste eos minima nemo, qui, eligendi esse.
-			</span>
-			<div class="container-fluid" style="margin-top: -50px" >
-				<div class="row">
-					<div class="col-md-12 text-center">
-						<h4>Presupuesto</h4>
-					</div>
-				</div>
-
-				<div class="row" id="content-muebles"></div>
-
-				<div class="row">
-					<div class="col-md-12 text-right">
-						<strong class="font-size-2 font-weight-bold">Sub-Total: </strong>
-						<div style="width: 90px; float: right;">
-							<span class="">$  </span>
-							<span class="" id="subtotal_presupuesto"></span>
+	<div class="collapse show-100" id="collapsePresupuesto" style="position: relative; z-index: 2147483647;" >
+			<div class="well" style="margin-bottom: 0; padding: .3rem;">
+				<div class="container-fluid" style="" >
+					<div class="row">
+						<div class="col-md-3" style="border-right: 1.2px #000 solid">
+							<h4 class="m-0" style="margin:0;">PRESUPUESTO 03/05/2019</h4>
+							<strong>Cliente: </strong>
+							<span id="nombre_cliente">Alvaro Lopez</span>
 						</div>
-					</div>
-					<div class="col-md-12 text-right">
-						<strong class="font-size-2 font-weight-bold"> 
-							<span class="" id="descuento_porcentaje"></span>% 
-							Descuento: 
-						</strong>
-						<div style="width: 90px; float: right;">
-							<span class="">$ </span>
-							<span class="" id="descuento_presupuesto"></span>
+						<div class="col-md-3 text-center" style="border-right: 1.2px #000 solid">
+							<h4 class="m-0" id="subtotal_presupuesto" style="margin:0;"></h4>
+							<span>Precio Sub Total</span>
 						</div>
-					</div>
-					<div class="col-md-12 text-right">
-						<strong class="font-size-2 font-weight-bold">Total a pagar: </strong>
-						<div style="width: 90px; float: right;">
-							<span class="">$  </span>
-							<span class="" id="total_presupuesto"></span>
+						<div class="col-md-3 text-center" style="border-right: 1.2px #000 solid">
+							<h4 class="m-0" style="margin:0;" id="descuento_presupuesto"></h4>
+							<span>Descuento</span>
+						</div>
+						<div class="col-md-3 text-center">
+							<h4 class="m-0" style="margin:0;" id="total_presupuesto"></h4>
+							<span>Total Neto</span>
 						</div>
 					</div>
 				</div>
 			</div>
+		</div>
+	<div class="div-muebles">
+		<div class="container">
+			<div class="row" id="content-muebles"></div>
 		</div>
 	</div>
-	<div id='interfaces' class='card'>
-		<div id="floorplanner" class='front'>
-			<div id="floorplanner-controls">
-				<button id="btn_save_design" class="btn btn-sm btn-default" title="Guardar Diseño">
-					<span class="glyphicon glyphicon-floppy-disk"></span>
-				</button>
-				<button id="draw" class="btn btn-sm btn-default" title="Draw New Walls">
-					<span class="glyphicon glyphicon-pencil"></span>
-				</button>
-				<button id="delete" class="btn btn-sm btn-default" title="Eliminar">
-					<span class="glyphicon glyphicon-remove"></span>
-				</button>
-				<button id="capture_canvas_editor" class="btn btn-sm btn-default" title="Capturar Imagen">
-					<span class="glyphicon glyphicon-camera"></span>
-				</button>
-				<button id="editar_datos" class="btn btn-sm btn-default" title="Editar Datos" type="button">
-					<span class="glyphicon glyphicon-pencil"></span> Datos					
-				</button>
-				<button class="btn btn-sm btn-default" type="button" data-toggle="collapse" data-target="#collapsePresupuesto" aria-expanded="false" aria-controls="collapseExample">
-					<i class="fas fa-cash-register"></i>
-				</button>
-			</div>
-			<div class="btn-hint ">Press the "Esc" key to stop drawing
-				walls</div>
-			<canvas id="floorplanner-canvas"></canvas>
-		</div>
-
-		<div id="viewer" class='back'>
-			<div id="main-controls">
+	
+	<div class="content-canvas" style="position: relative; float: left;">
+		<div id='interfaces' class='card'>
+			<div id="floorplanner" class='front'>
+				<div id="floorplanner-controls">
 					<button id="btn_save_design" class="btn btn-sm btn-default" title="Guardar Diseño">
 						<span class="glyphicon glyphicon-floppy-disk"></span>
 					</button>
-					<button id="capture_canvas_editor_3d" class="btn btn-sm btn-default" title="Capturar Imagen">
+					<button id="draw" class="btn btn-sm btn-default" title="Draw New Walls">
+						<span class="glyphicon glyphicon-pencil"></span>
+					</button>
+					<button id="delete" class="btn btn-sm btn-default" title="Eliminar">
+						<span class="glyphicon glyphicon-remove"></span>
+					</button>
+					<button id="capture_canvas_editor" class="btn btn-sm btn-default" title="Capturar Imagen">
 						<span class="glyphicon glyphicon-camera"></span>
 					</button>
 					<button id="editar_datos" class="btn btn-sm btn-default" title="Editar Datos" type="button">
 						<span class="glyphicon glyphicon-pencil"></span> Datos					
 					</button>
 					<button class="btn btn-sm btn-default" type="button" data-toggle="collapse" data-target="#collapsePresupuesto" aria-expanded="false" aria-controls="collapseExample">
-						<i class="fas fa-cash-register"></i>
+						<i class="fas fa-clipboard-list"></i> Presupuesto
 					</button>
-				<!--
-				<a href="#" class="btn btn-default btn-sm glyphicon glyphicon-floppy-disk" id="new" title="New Layout"></a> <a
-					href="#" class="btn btn-default btn-sm glyphicon glyphicon-floppy-save" id="saveFile" title="Save Layout"></a>
-				<a class="btn btn-sm btn-default btn-file glyphicon glyphicon-floppy-open">
-					<input type="file" class="hidden-input" id="loadFile">
-				</a>
-				<a href="#" class="btn btn-default btn-sm glyphicon glyphicon-asterisk" id="saveMesh"
-					title="Save Scene as a mesh"></a>
-				<a href="#" class="btn btn-default btn-sm glyphicon glyphicon-export" id="saveGLTF"
-					title="Save Scene as a GLTF"></a>
-				<a href="#" class="btn btn-default btn-sm glyphicon glyphicon-camera"	id="capture_canvas_editor_3d" title="Save Scene as a GLTF"></a>
-				-->
+				</div>
+				<div class="btn-hint ">Press the "Esc" key to stop drawing
+					walls</div>
+				<canvas id="floorplanner-canvas"></canvas>
 			</div>
-		</div>
-	</div>
-	<div id='interface-controls'>
-		<button id="showFloorPlan" class="btn btn-sm btn-default active" title="Edit 2D floorplan">
-			<span class="glyphicon glyphicon-move"></span> Floor Plan
-		</button>
-		<button id="showDesign" class="btn btn-sm btn-default" title="Edit 3D floorplan">
-			<span class="glyphicon glyphicon-move"></span> 3D
-		</button>
-		<div class="btn-group-vertical" id='viewcontrols'>
-			<div class="btn btn-sm btn-default">
-				<a class="btn btn-default bottom" href="#" id="leftview" title="Show side view (left)">
-					<span class="glyphicon glyphicon glyphicon-object-align-left"></span>
-				</a>
-				<span class="btn-group-vertical">
-					<a class="btn btn-default" href="#" id="topview" title="Show top view">
-						<span class="glyphicon glyphicon glyphicon-object-align-horizontal"></span>
-					</a>
-					<a class="btn btn-default" href="#" id="isometryview" title="Show 3d view">
-						<span class="glyphicon glyphicon glyphicon-inbox"></span>
-					</a>
-					<a class="btn btn-default" href="#" id="frontview" title="Show front view">
-						<span class="glyphicon glyphicon glyphicon-object-align-vertical"></span>
-					</a>
-				</span>
-				<a class="btn btn-default bottom" href="#" id="rightview" title="Show side view (right)">
-					<span class="glyphicon glyphicon glyphicon-object-align-right"></span>
-				</a>
-			</div>
-			<button id="showSwitchCameraMode" class="btn btn-sm btn-default" title="Switch Camera ortho/perspective">
-				<span class="glyphicon glyphicon-camera"></span>
-			</button>
-			<button id="showSwitchWireframeMode" class="btn btn-sm btn-default" title="Switch wireframe mode">
-				<span class="glyphicon glyphicon-pencil"></span>
-			</button>
-		</div>
-		<button id="showAddItems" class="btn btn-sm btn-default" data-toggle="modal" data-target="#add-items-modal"
-			title="Add/Remove items in 3D">
-			<span class="glyphicon glyphicon-plus"></span>
-		</button>
-		<button id="showFirstPerson" class="btn btn-sm btn-default" title="Walk through">
-			<span class="glyphicon glyphicon-eye-open"></span>
-		</button>
-	</div>
 
+			<div id="viewer" class='back'>
+				<div id="main-controls">
+						<button id="btn_save_design" class="btn btn-sm btn-default" title="Guardar Diseño">
+							<span class="glyphicon glyphicon-floppy-disk"></span>
+						</button>
+						<button id="capture_canvas_editor_3d" class="btn btn-sm btn-default" title="Capturar Imagen">
+							<span class="glyphicon glyphicon-camera"></span>
+						</button>
+						<button id="editar_datos" class="btn btn-sm btn-default" title="Editar Datos" type="button">
+							<span class="glyphicon glyphicon-pencil"></span> Datos					
+						</button>
+						<button class="btn btn-sm btn-default" type="button" data-toggle="collapse" data-target="#collapsePresupuesto" aria-expanded="false" aria-controls="collapseExample">
+							<i class="fas fa-clipboard-list"></i> Presupuesto
+						</button>
+					<!--
+					<a href="#" class="btn btn-default btn-sm glyphicon glyphicon-floppy-disk" id="new" title="New Layout"></a> <a
+						href="#" class="btn btn-default btn-sm glyphicon glyphicon-floppy-save" id="saveFile" title="Save Layout"></a>
+					<a class="btn btn-sm btn-default btn-file glyphicon glyphicon-floppy-open">
+						<input type="file" class="hidden-input" id="loadFile">
+					</a>
+					<a href="#" class="btn btn-default btn-sm glyphicon glyphicon-asterisk" id="saveMesh"
+						title="Save Scene as a mesh"></a>
+					<a href="#" class="btn btn-default btn-sm glyphicon glyphicon-export" id="saveGLTF"
+						title="Save Scene as a GLTF"></a>
+					<a href="#" class="btn btn-default btn-sm glyphicon glyphicon-camera"	id="capture_canvas_editor_3d" title="Save Scene as a GLTF"></a>
+					-->
+				</div>
+			</div>
+		</div>
+		<div id='interface-controls'>
+			<button id="showFloorPlan" class="btn btn-sm btn-default active" title="Edit 2D floorplan">
+				<span class="glyphicon glyphicon-move"></span> Floor Plan
+			</button>
+			<button id="showDesign" class="btn btn-sm btn-default" title="Edit 3D floorplan">
+				<span class="glyphicon glyphicon-move"></span> 3D
+			</button>
+			<div class="btn-group-vertical" id='viewcontrols'>
+				<div class="btn btn-sm btn-default">
+					<a class="btn btn-default bottom" href="#" id="leftview" title="Show side view (left)">
+						<span class="glyphicon glyphicon glyphicon-object-align-left"></span>
+					</a>
+					<span class="btn-group-vertical">
+						<a class="btn btn-default" href="#" id="topview" title="Show top view">
+							<span class="glyphicon glyphicon glyphicon-object-align-horizontal"></span>
+						</a>
+						<a class="btn btn-default" href="#" id="isometryview" title="Show 3d view">
+							<span class="glyphicon glyphicon glyphicon-inbox"></span>
+						</a>
+						<a class="btn btn-default" href="#" id="frontview" title="Show front view">
+							<span class="glyphicon glyphicon glyphicon-object-align-vertical"></span>
+						</a>
+					</span>
+					<a class="btn btn-default bottom" href="#" id="rightview" title="Show side view (right)">
+						<span class="glyphicon glyphicon glyphicon-object-align-right"></span>
+					</a>
+				</div>
+				<button id="showSwitchCameraMode" class="btn btn-sm btn-default" title="Switch Camera ortho/perspective">
+					<span class="glyphicon glyphicon-camera"></span>
+				</button>
+				<button id="showSwitchWireframeMode" class="btn btn-sm btn-default" title="Switch wireframe mode">
+					<span class="glyphicon glyphicon-pencil"></span>
+				</button>
+			</div>
+			<button id="showAddItems" class="btn btn-sm btn-default" data-toggle="modal" data-target="#add-items-modal"
+				title="Add/Remove items in 3D">
+				<span class="glyphicon glyphicon-plus"></span>
+			</button>
+			<button id="showFirstPerson" class="btn btn-sm btn-default" title="Walk through">
+				<span class="glyphicon glyphicon-eye-open"></span>
+			</button>
+		</div>
+	</div>
 	<!-- Add Items -->
 	<div class="modal fade" id="add-items-modal" role="dialog">
 		<div class="modal-dialog">
