--- a/public/editor/index.html
+++ b/public/editor/index.html
@@ -11,10 +11,10 @@
 
 	<link href="css/app.css" rel="stylesheet">
 
-	<script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
-	<script src="https://cdn.rawgit.com/nnattawat/flip/master/dist/jquery.flip.min.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/dat-gui/0.7.3/dat.gui.min.js"></script>
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+	<script src="js/jquery-2.1.4.min.js"></script>
+	<script src="js/jquery.flip.min.js"></script>
+	<script src="js/dat.gui.min.js"></script>
+	<script src="js/bootstrap.min.js"></script> 
 	<script src="js/bp3djs.min.js"></script>
 	<script src="js/items.js"></script>
 	<script src="js/items_gltf.js"></script>
