--- a/public/editor/index.html
+++ b/public/editor/index.html
@@ -32,20 +32,20 @@
 		<div class="well" style="margin-bottom: 0; padding: .3rem;">
 			<div class="container-fluid" style="" >
 				<div class="row">
-					<div class="col-md-3" style="border-right: 1.2px #000 solid">
+					<div class="col-xs-3" style="border-right: 1.2px #000 solid;">
 						<h4 class="m-0" style="margin:0;">PRESUPUESTO <span class="fecha_presupuesto"></span></h4>
 						<strong>Cliente: </strong>
 						<span id="nombre_cliente_collapse"></span>
 					</div>
-					<div class="col-md-3 text-center" style="border-right: 1.2px #000 solid">
+					<div class="col-xs-3 text-center" style="border-right: 1.2px #000 solid">
 						<h4 class="m-0" id="subtotal_presupuesto" style="margin:0;"></h4>
 						<span>Precio Sub Total</span>
 					</div>
-					<div class="col-md-3 text-center" style="border-right: 1.2px #000 solid">
+					<div class="col-xs-3 text-center" style="border-right: 1.2px #000 solid">
 						<h4 class="m-0" style="margin:0;" id="descuento_presupuesto"></h4>
 						<span>Descuento</span>
 					</div>
-					<div class="col-md-3 text-center">
+					<div class="col-xs-3 text-center">
 						<h4 class="m-0" style="margin:0;" id="total_presupuesto"></h4>
 						<span>Total Neto</span>
 					</div>
@@ -82,9 +82,11 @@
 					<button class="btn btn-sm btn-default editar_datos" title="Editar Datos" type="button">
 						<span class="glyphicon glyphicon-pencil"></span> Datos
 					</button>
+					<!--
 					<button class="btn btn-sm btn-default" type="button" data-toggle="collapse" data-target="#collapsePresupuesto" aria-expanded="false" aria-controls="collapseExample">
 						<i class="fas fa-clipboard-list"></i> Presupuesto
 					</button>
+					-->
 				</div>
 				<div class="btn-hint ">Press the "Esc" key to stop drawing
 					walls</div>
@@ -102,46 +104,21 @@
 					<button class="btn btn-sm btn-default editar_datos" title="Editar Datos" type="button">
 						<span class="glyphicon glyphicon-pencil"></span> Datos					
 					</button>
+					<!--
 					<button class="btn btn-sm btn-default" type="button" data-toggle="collapse" data-target="#collapsePresupuesto" aria-expanded="false" aria-controls="collapseExample">
 						<i class="fas fa-clipboard-list"></i> Presupuesto
 					</button>
+					-->
 				</div>
 			</div>
 		</div>
 		<div id='interface-controls'>
 			<button id="showFloorPlan" class="btn btn-sm btn-default active" title="Edit 2D floorplan">
-				<span class="glyphicon glyphicon-move"></span> Floor Plan
+				<span class="glyphicon glyphicon-move"></span> Plano
 			</button>
 			<button id="showDesign" class="btn btn-sm btn-default" title="Edit 3D floorplan">
 				<span class="glyphicon glyphicon-move"></span> 3D
 			</button>
-			<div class="btn-group-vertical" id='viewcontrols'>
-				<div class="btn btn-sm btn-default">
-					<a class="btn btn-default bottom" href="#" id="leftview" title="Show side view (left)">
-						<span class="glyphicon glyphicon glyphicon-object-align-left"></span>
-					</a>
-					<span class="btn-group-vertical">
-						<a class="btn btn-default" href="#" id="topview" title="Show top view">
-							<span class="glyphicon glyphicon glyphicon-object-align-horizontal"></span>
-						</a>
-						<a class="btn btn-default" href="#" id="isometryview" title="Show 3d view">
-							<span class="glyphicon glyphicon glyphicon-inbox"></span>
-						</a>
-						<a class="btn btn-default" href="#" id="frontview" title="Show front view">
-							<span class="glyphicon glyphicon glyphicon-object-align-vertical"></span>
-						</a>
-					</span>
-					<a class="btn btn-default bottom" href="#" id="rightview" title="Show side view (right)">
-						<span class="glyphicon glyphicon glyphicon-object-align-right"></span>
-					</a>
-				</div>
-				<button id="showSwitchCameraMode" class="btn btn-sm btn-default" title="Switch Camera ortho/perspective">
-					<span class="glyphicon glyphicon-camera"></span>
-				</button>
-				<button id="showSwitchWireframeMode" class="btn btn-sm btn-default" title="Switch wireframe mode">
-					<span class="glyphicon glyphicon-pencil"></span>
-				</button>
-			</div>
 			<button id="showAddItems" class="btn btn-sm btn-default" data-toggle="modal" data-target="#add-items-modal"
 				title="Add/Remove items in 3D">
 				<span class="glyphicon glyphicon-plus"></span>
@@ -206,6 +183,7 @@
 			</div>
 		</div>
 	</div>
+	
 </body>
 
 </html>
