--- a/public/editor/index.html
+++ b/public/editor/index.html
@@ -30,7 +30,7 @@
 <body>
 	<div class="show-100 collapse in" id="collapsePresupuesto" style="position: relative; z-index: 2147483620;" >
 		<div class="well" style="margin-bottom: 0; padding: .3rem;">
-			<div class="container-fluid" style="" >
+			<div class="container-fluid" >
 				<div class="row">
 					<div class="col-xs-3" style="border-right: 1.2px #000 solid;">
 						<h4 class="m-0" style="margin:0;">PRESUPUESTO <span class="fecha_presupuesto"></span></h4>
@@ -53,18 +53,14 @@
 			</div>
 		</div>
 	</div>
-<!-- 	
-	<div class="div-muebles" style="width: 100px">
-		
-	</div>
-	 -->
-	<div class="presupuestos-muebles">
-		<div class="container">
-			<div class="row" id="content-muebles"></div>
-		</div>
-	</div>
-	<div class="content-canvas" style="position: relative; float: left; width: 87%;">
+	
+	<div class="content-canvas" style="position: relative; float: left;">
 		<div id='interfaces' class='card'>
+			<div class="presupuestos-muebles">
+				<div class="container">
+					<div class="row" id="content-muebles"></div>
+				</div>
+			</div>
 			<div id="floorplanner" class='front'>
 				<div id="floorplanner-controls">
 					<button class="btn btn-sm btn-default btn_save_design" title="Guardar Diseño">
@@ -82,11 +78,6 @@
 					<button class="btn btn-sm btn-default editar_datos" title="Editar Datos" type="button">
 						<span class="glyphicon glyphicon-pencil"></span> Datos
 					</button>
-					<!--
-					<button class="btn btn-sm btn-default" type="button" data-toggle="collapse" data-target="#collapsePresupuesto" aria-expanded="false" aria-controls="collapseExample">
-						<i class="fas fa-clipboard-list"></i> Presupuesto
-					</button>
-					-->
 				</div>
 				<div class="btn-hint ">Press the "Esc" key to stop drawing
 					walls</div>
@@ -94,7 +85,7 @@
 			</div>
 
 			<div id="viewer" class='back'>
-				<div id="main-controls">
+				<div id="main-controls" class="d-none">
 					<button class="btn btn-sm btn-default btn_save_design" title="Guardar Diseño">
 						<span class="glyphicon glyphicon-floppy-disk"></span>
 					</button>
@@ -104,11 +95,6 @@
 					<button class="btn btn-sm btn-default editar_datos" title="Editar Datos" type="button">
 						<span class="glyphicon glyphicon-pencil"></span> Datos					
 					</button>
-					<!--
-					<button class="btn btn-sm btn-default" type="button" data-toggle="collapse" data-target="#collapsePresupuesto" aria-expanded="false" aria-controls="collapseExample">
-						<i class="fas fa-clipboard-list"></i> Presupuesto
-					</button>
-					-->
 				</div>
 			</div>
 		</div>
