--- a/public/editor/index.html
+++ b/public/editor/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<title>Blueprint JS - Floorplan</title>
-	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css"
+		integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
 	<link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 
@@ -14,23 +16,23 @@
 	<script src="js/jquery-2.1.4.min.js"></script>
 	<script src="js/jquery.flip.min.js"></script>
 	<script src="js/dat.gui.min.js"></script>
-	<script src="js/bootstrap.min.js"></script> 
+	<script src="js/bootstrap.min.js"></script>
 	<script src="js/bp3djs.min.js"></script>
 	<script src="js/items.js"></script>
 	<script src="js/items_gltf.js"></script>
 	<script src="js/app.js"></script>
 	<script src="js/capture-camara.js"></script>
 	<style>
-		m-0{
+		m-0 {
 			margin: 0px !important;
 		}
 	</style>
 </head>
 
 <body>
-	<div class="show-100 collapse in" id="collapsePresupuesto" style="position: relative; z-index: 2147483620;" >
+	<div class="show-100 collapse in" id="collapsePresupuesto" style="position: relative; z-index: 2147483620;">
 		<div class="well" style="margin-bottom: 0; padding: .3rem;">
-			<div class="container-fluid" style="" >
+			<div class="container-fluid" style="">
 				<div class="row">
 					<div class="col-md-3" style="border-right: 1.2px #000 solid">
 						<h4 class="m-0" style="margin:0;">PRESUPUESTO <span class="fecha_presupuesto"></span></h4>
@@ -53,7 +55,7 @@
 			</div>
 		</div>
 	</div>
-<!-- 	
+	<!-- 	
 	<div class="div-muebles" style="width: 100px">
 		
 	</div>
@@ -82,9 +84,11 @@
 					<button class="btn btn-sm btn-default editar_datos" title="Editar Datos" type="button">
 						<span class="glyphicon glyphicon-pencil"></span> Datos
 					</button>
-					<button class="btn btn-sm btn-default" type="button" data-toggle="collapse" data-target="#collapsePresupuesto" aria-expanded="false" aria-controls="collapseExample">
+					<button class="btn btn-sm btn-default" type="button" data-toggle="collapse"
+						data-target="#collapsePresupuesto" aria-expanded="false" aria-controls="collapseExample">
 						<i class="fas fa-clipboard-list"></i> Presupuesto
 					</button>
+
 				</div>
 				<div class="btn-hint ">Press the "Esc" key to stop drawing
 					walls</div>
@@ -100,10 +104,14 @@
 						<span class="glyphicon glyphicon-camera"></span>
 					</button>
 					<button class="btn btn-sm btn-default editar_datos" title="Editar Datos" type="button">
-						<span class="glyphicon glyphicon-pencil"></span> Datos					
+						<span class="glyphicon glyphicon-pencil"></span> Datos
 					</button>
-					<button class="btn btn-sm btn-default" type="button" data-toggle="collapse" data-target="#collapsePresupuesto" aria-expanded="false" aria-controls="collapseExample">
+					<button class="btn btn-sm btn-default" type="button" data-toggle="collapse"
+						data-target="#collapsePresupuesto" aria-expanded="false" aria-controls="collapseExample">
 						<i class="fas fa-clipboard-list"></i> Presupuesto
+					</button>
+					<button id="lentesBtn" class="btn btn-sm btn-default" type="button" aria-expanded="false">
+						<i class="fas fa-glasses"></i>
 					</button>
 				</div>
 			</div>
@@ -135,7 +143,8 @@
 						<span class="glyphicon glyphicon glyphicon-object-align-right"></span>
 					</a>
 				</div>
-				<button id="showSwitchCameraMode" class="btn btn-sm btn-default" title="Switch Camera ortho/perspective">
+				<button id="showSwitchCameraMode" class="btn btn-sm btn-default"
+					title="Switch Camera ortho/perspective">
 					<span class="glyphicon glyphicon-camera"></span>
 				</button>
 				<button id="showSwitchWireframeMode" class="btn btn-sm btn-default" title="Switch wireframe mode">
@@ -161,7 +170,7 @@
 				</div>
 				<div class="modal-body">
 					<div id="add-items" class="panel-group">
-						
+
 					</div>
 				</div>
 				<div class="modal-footer">
@@ -172,11 +181,13 @@
 	</div>
 
 	<!-- Presupuesto -->
-	<div class="modal fade" id="modalPresupuesto" tabindex="-1" role="dialog" aria-labelledby="modalPresupuestoLabel" style="z-index: 2147483621">
+	<div class="modal fade" id="modalPresupuesto" tabindex="-1" role="dialog" aria-labelledby="modalPresupuestoLabel"
+		style="z-index: 2147483621">
 		<div class="modal-dialog" role="document">
 			<div class="modal-content">
 				<div class="modal-header">
-					<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+					<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span
+							aria-hidden="true">&times;</span></button>
 					<h4 class="modal-title" id="modalPresupuestoLabel">Nuevo Presupuesto</h4>
 				</div>
 				<div class="modal-body">
@@ -206,6 +217,25 @@
 			</div>
 		</div>
 	</div>
+
+
+	<!-- Presupuesto -->
+	<div class="modal fade" id="modalVisorEspere" tabindex="-1" role="dialog" style="z-index: 2147483621">
+		<div class="modal-dialog" role="document">
+			<div class="modal-content">
+
+				<div class="modal-body">
+					<div class="text-center">
+						<h2>Espere...</h2>
+						<img src="img/espere.gif" alt='' class="">
+					</div>
+
+				</div>
+
+			</div>
+		</div>
+	</div>
+
 </body>
 
 </html>
