--- a/public/editor/index.html
+++ b/public/editor/index.html
@@ -1,13 +1,11 @@
 <!DOCTYPE html>
 <html lang="es">
-
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<title>Blueprint JS - Floorplan</title>
-	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css"
-		integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
 	<link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 
@@ -16,27 +14,23 @@
 	<script src="js/jquery-2.1.4.min.js"></script>
 	<script src="js/jquery.flip.min.js"></script>
 	<script src="js/dat.gui.min.js"></script>
-	<script src="js/bootstrap.min.js"></script>
+	<script src="js/bootstrap.min.js"></script> 
 	<script src="js/bp3djs.min.js"></script>
 	<script src="js/items.js"></script>
 	<script src="js/items_gltf.js"></script>
 	<script src="js/app.js"></script>
 	<script src="js/capture-camara.js"></script>
 	<style>
-		m-0 {
+		m-0{
 			margin: 0px !important;
 		}
 	</style>
 </head>
 
 <body>
-	<div class="show-100 collapse in" id="collapsePresupuesto" style="position: relative; z-index: 2147483620;">
+	<div class="show-100 collapse in" id="collapsePresupuesto" style="position: relative; z-index: 2147483620;" >
 		<div class="well" style="margin-bottom: 0; padding: .3rem;">
-<<<<<<< HEAD
-			<div class="container-fluid" style="">
-=======
 			<div class="container-fluid" >
->>>>>>> origin/8-detalles
 				<div class="row">
 					<div class="col-xs-3" style="border-right: 1.2px #000 solid;">
 						<h4 class="m-0" style="margin:0;">PRESUPUESTO <span class="fecha_presupuesto"></span></h4>
@@ -59,22 +53,8 @@
 			</div>
 		</div>
 	</div>
-<<<<<<< HEAD
-	<!-- 	
-	<div class="div-muebles" style="width: 100px">
-		
-	</div>
-	 -->
-	<div class="presupuestos-muebles">
-		<div class="container">
-			<div class="row" id="content-muebles"></div>
-		</div>
-	</div>
-	<div class="content-canvas" style="position: relative; float: left; width: 87%;">
-=======
 	
 	<div class="content-canvas" style="position: relative; float: left;">
->>>>>>> origin/8-detalles
 		<div id='interfaces' class='card'>
 			<div class="presupuestos-muebles">
 				<div class="container">
@@ -98,14 +78,6 @@
 					<button class="btn btn-sm btn-default editar_datos" title="Editar Datos" type="button">
 						<span class="glyphicon glyphicon-pencil"></span> Datos
 					</button>
-<<<<<<< HEAD
-					<button class="btn btn-sm btn-default" type="button" data-toggle="collapse"
-						data-target="#collapsePresupuesto" aria-expanded="false" aria-controls="collapseExample">
-						<i class="fas fa-clipboard-list"></i> Presupuesto
-					</button>
-
-=======
->>>>>>> origin/8-detalles
 				</div>
 				<div class="btn-hint ">Press the "Esc" key to stop drawing
 					walls</div>
@@ -121,18 +93,12 @@
 						<span class="glyphicon glyphicon-camera"></span>
 					</button>
 					<button class="btn btn-sm btn-default editar_datos" title="Editar Datos" type="button">
-						<span class="glyphicon glyphicon-pencil"></span> Datos
-					</button>
-<<<<<<< HEAD
-					<button class="btn btn-sm btn-default" type="button" data-toggle="collapse"
-						data-target="#collapsePresupuesto" aria-expanded="false" aria-controls="collapseExample">
-						<i class="fas fa-clipboard-list"></i> Presupuesto
+						<span class="glyphicon glyphicon-pencil"></span> Datos					
 					</button>
 					<button id="lentesBtn" class="btn btn-sm btn-default" type="button" aria-expanded="false">
 						<i class="fas fa-glasses"></i>
 					</button>
-=======
->>>>>>> origin/8-detalles
+
 				</div>
 			</div>
 		</div>
@@ -143,37 +109,6 @@
 			<button id="showDesign" class="btn btn-sm btn-default" title="Edit 3D floorplan">
 				<span class="glyphicon glyphicon-move"></span> 3D
 			</button>
-<<<<<<< HEAD
-			<div class="btn-group-vertical" id='viewcontrols'>
-				<div class="btn btn-sm btn-default">
-					<a class="btn btn-default bottom" href="#" id="leftview" title="Show side view (left)">
-						<span class="glyphicon glyphicon glyphicon-object-align-left"></span>
-					</a>
-					<span class="btn-group-vertical">
-						<a class="btn btn-default" href="#" id="topview" title="Show top view">
-							<span class="glyphicon glyphicon glyphicon-object-align-horizontal"></span>
-						</a>
-						<a class="btn btn-default" href="#" id="isometryview" title="Show 3d view">
-							<span class="glyphicon glyphicon glyphicon-inbox"></span>
-						</a>
-						<a class="btn btn-default" href="#" id="frontview" title="Show front view">
-							<span class="glyphicon glyphicon glyphicon-object-align-vertical"></span>
-						</a>
-					</span>
-					<a class="btn btn-default bottom" href="#" id="rightview" title="Show side view (right)">
-						<span class="glyphicon glyphicon glyphicon-object-align-right"></span>
-					</a>
-				</div>
-				<button id="showSwitchCameraMode" class="btn btn-sm btn-default"
-					title="Switch Camera ortho/perspective">
-					<span class="glyphicon glyphicon-camera"></span>
-				</button>
-				<button id="showSwitchWireframeMode" class="btn btn-sm btn-default" title="Switch wireframe mode">
-					<span class="glyphicon glyphicon-pencil"></span>
-				</button>
-			</div>
-=======
->>>>>>> origin/8-detalles
 			<button id="showAddItems" class="btn btn-sm btn-default" data-toggle="modal" data-target="#add-items-modal"
 				title="Add/Remove items in 3D">
 				<span class="glyphicon glyphicon-plus"></span>
@@ -193,7 +128,7 @@
 				</div>
 				<div class="modal-body">
 					<div id="add-items" class="panel-group">
-
+						
 					</div>
 				</div>
 				<div class="modal-footer">
@@ -204,13 +139,11 @@
 	</div>
 
 	<!-- Presupuesto -->
-	<div class="modal fade" id="modalPresupuesto" tabindex="-1" role="dialog" aria-labelledby="modalPresupuestoLabel"
-		style="z-index: 2147483621">
+	<div class="modal fade" id="modalPresupuesto" tabindex="-1" role="dialog" aria-labelledby="modalPresupuestoLabel" style="z-index: 2147483621">
 		<div class="modal-dialog" role="document">
 			<div class="modal-content">
 				<div class="modal-header">
-					<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span
-							aria-hidden="true">&times;</span></button>
+					<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
 					<h4 class="modal-title" id="modalPresupuestoLabel">Nuevo Presupuesto</h4>
 				</div>
 				<div class="modal-body">
@@ -241,8 +174,7 @@
 		</div>
 	</div>
 
-
-	<!-- Presupuesto -->
+	<!-- modal visor espere -->
 	<div class="modal fade" id="modalVisorEspere" tabindex="-1" role="dialog" style="z-index: 2147483621">
 		<div class="modal-dialog" role="document">
 			<div class="modal-content">
@@ -259,6 +191,7 @@
 		</div>
 	</div>
 
+	
 </body>
 
 </html>
