--- a/public/editor/index.html
+++ b/public/editor/index.html
@@ -120,12 +120,19 @@
 			<div class="modal-content">
 				<div class="modal-header">
 					<button type="button" class="close" data-dismiss="modal">&times;</button>
-					<h4 class="modal-title">Lineas</h4>
+					<h4 class="modal-title">Muebles</h4>
 				</div>
 				<div class="modal-body">
-					<div id="add-items" class="panel-group">
-						
+					<div class="container-fluid">
+						<div class="row">
+							<div class="col-sm-12">
+								<input type="text" class="form-control" id="search_muebles" placeholder="Buscar muebles..." autocomplete="off">
+							</div>
+						</div>
+						<br>
 					</div>
+					<div id="search_items" class="panel-group"></div>
+					<div id="add-items" class="panel-group"></div>
 				</div>
 				<div class="modal-footer">
 					<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
