--- a/public/editor/index.html
+++ b/public/editor/index.html
@@ -42,8 +42,8 @@
 						<span>Precio Sub Total</span>
 					</div>
 					<div class="col-xs-3 text-center" style="border-right: 1.2px #000 solid">
-						<h4 class="m-0" style="margin:0;" id="descuento_presupuesto"></h4>
-						<span>Descuento</span>
+						<h4 class="m-0" style="margin:0;" id="iva_presupuesto"></h4>
+						<span>Iva</span>
 					</div>
 					<div class="col-xs-3 text-center">
 						<h4 class="m-0" style="margin:0;" id="total_presupuesto"></h4>
